--- a/backend/hg-weather-js-1.0/index.html
+++ b/backend/hg-weather-js-1.0/index.html
@@ -29,7 +29,7 @@
   <body>
     <h1>HG Weather</h1>
 
-    <div class="hg-weather" data-key="development" data-woeid="455827">
+    <div class="hg-weather" data-key="a726c345" data-woeid="455888">
       <span data-weather="message">Obtendo...<br></span>
 
       <span data-weather="city">Obtendo cidade</span> <span data-weather="temp">00</span>º C<br>
