--- a/backend/tempo-natal.html
+++ b/backend/tempo-natal.html
@@ -1,4 +1,4 @@
-<div class="hg-weather" id="teste" data-key="a726c345" data-woeid="455888">
+<div class="hg-weather" id="teste" data-key="a726c345" data-woeid="98906950">
     <span data-weather="message">Obtendo...<br></span>
   
     <span data-weather="city">Obtendo cidade</span> <span data-weather="temp">00</span>º C<br>
